k8s/queue-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-provisioning-worker
  namespace: woocommerce-platform
  labels:
    app: store-worker
    tier: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-worker
  template:
    metadata:
      labels:
        app: store-worker
        tier: worker
    spec:
      serviceAccountName: woocommerce-worker-sa
      containers:
      - name: worker
        image: vishwajeet075/store-provision:latest  
        imagePullPolicy: Always
        command: ["npm", "run", "worker"]  
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        
      
      restartPolicy: Always
